--- a/mortgage-front/src/app/app.component.html
+++ b/mortgage-front/src/app/app.component.html
@@ -2,3 +2,5 @@
     <router-outlet></router-outlet>
 <!-- </div> -->
 <!-- <router-outlet *ngIf="!showGeneral"></router-outlet> -->
+ <accessibility-menu></accessibility-menu>
+ 
