--- a/mortgage-front/src/app/global/accessibility-menu/accessibility-menu.component.css
+++ b/mortgage-front/src/app/global/accessibility-menu/accessibility-menu.component.css
@@ -1,17 +1,33 @@
 .accessibility-button {
-    position:absolute;
-    bottom: 16px;
-    left: 16px;
+    position: fixed;
+    bottom: 5vh;
+    left: -16px;
     z-index: 1000;
-  }
-  /* .high-contrast {
-    background-color: #000;
-    color: #e6ea07;
-    filter: contrast(200%);
-  } */
+}
+
+.side-menu {
+    position: fixed;
+    bottom:15vh;
+    left: -300px; /* התפריט מוסתר מהצד */
+    width: auto;
+    max-width: 300px; /* רוחב מקסימלי */
+    background-color: #f9fafb;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
+    transition: left 0.3s ease;
+    border-top-right-radius: 20px; /* קצוות עגולים */
+    border-bottom-right-radius: 20px; /* קצוות עגולים */
+    overflow-y: auto;
+    padding: 16px;
+    box-sizing: border-box;
+    z-index: 1000;
+}
+
+.side-menu.open {
+    left: 0; /* התפריט נפתח ונגלה */
+}
+
 .container-item {
     padding: 10px;
-    /* background-color: #f9fafb; */
     color: #0d0d0d;
     border: none;
     border-radius: 5px;
@@ -19,31 +35,30 @@
     transition: background-color 0.3s ease;
     display: flex;
     align-items: center;
-    gap: 8px;
-    display: flex;
-    align-items: center;
     justify-content: space-between;
-}
-.simple-keyboard {
-    position: absolute;
-    bottom: 0;
-    width: 60%;
-    margin-left: 327px; 
-    background-color: #333;
-    color: black;
-    border: 2px solid red; 
-}
-.simple-keyboard .hg-button {
-    background-color: #555;
-    color: #fff;
-    border-radius: 5px;
-    border: 1px solid #000;
-    font-size: 16px;
-}
-.simple-keyboard .hg-button:hover {
-    background-color: #777;
+    gap: 8px;
 }
 
-.simple-keyboard .hg-button:active {
-    background-color: #999;
+.container-item:hover {
+    background-color: #f0f0f0;
+}
+
+
+.access {
+    background-color: #01199f; 
+    color: white;
+    border-top-right-radius: 30%!important;
+    border-bottom-right-radius: 30%!important;
+    text-align: right;
+    width: 80px;
+    border: 2px solid white;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.access:hover {
+    background-color:#00116e; 
+    border: 3px solid white;
+}
+.access:active {
+    background-color:#030f55; 
 }
