--- a/mortgage-front/src/app/admin/mailing-list/mailing-list.component.html
+++ b/mortgage-front/src/app/admin/mailing-list/mailing-list.component.html
@@ -1,4 +1,5 @@
-<div id="content" style="padding: 50px;margin-top: 15px;">
+<div class="mainAll">
+<div id="content" style="padding: 50px;margin-top: 15px;" >
     <mat-card class="mailing-list-card">
       <mat-card-header class="card-header">
         <mat-card-title class="card-title">רשימת תפוצה</mat-card-title>
@@ -26,4 +27,4 @@
       </mat-card-content>
     </mat-card>
   </div>
-  
+  </div>
