--- a/mortgage-front/src/app/global/accessibility-menu/accessibility-menu.component.html
+++ b/mortgage-front/src/app/global/accessibility-menu/accessibility-menu.component.html
@@ -1,6 +1,6 @@
 <div class="accessibility-button">
   <button mat-fab color="primary" (click)="toggleMenu()" class="access">
-    <mat-icon style="float: right;">accessible</mat-icon>
+    <mat-icon style="float: right;">settings_accessibility</mat-icon>
   </button>
 </div>
 
