--- a/mortgage-front/src/app/global/toolbar/toolbar.component.html
+++ b/mortgage-front/src/app/global/toolbar/toolbar.component.html
@@ -3,13 +3,15 @@
     <div class="logo-container">
       <img src="assets/logo.png" alt="Logo" class="logo">
     </div>
-    <button class="buttonLog" mat-button routerLink="/auth/login" (click)="logOut()">
-      <mat-icon>{{ loginService.isLoggedIn() ? 'logout' : 'login' }}</mat-icon>
-      {{ loginService.isLoggedIn() ? 'יציאה' : 'התחברות' }}
-    </button>
+
     <div class="welcome-message">
+      <button class="buttonLog" mat-button routerLink="/auth/login" (click)="logOut()">
+        <mat-icon>{{ loginService.isLoggedIn() ? 'logout' : 'login' }}</mat-icon>
+        {{ loginService.isLoggedIn() ? 'יציאה' : 'התחברות' }}
+      </button>
       <span class="span">!שלום {{ loginService.GetCurrentUser().userName!=null?
         loginService.GetCurrentUser().userName:'אורח'}}</span>
+        <mat-icon>account_circle</mat-icon>
       @if(!this.loginService.isAdmin()){
       <button mat-icon-button (click)="openNotifications()">
         <mat-icon [matBadge]="this.notificationService.unreadNotificationsCount"  [matBadgeHidden]="!this.notificationService.hasUnreadNotifications"  aria-hidden="false"
@@ -20,6 +22,11 @@
         <mat-icon>description</mat-icon>
       </button>
       }
+      @else {
+        <mat-icon routerLink="user-list" matTooltip="ניהול משתמשים" class="tool-icon" >settings</mat-icon>
+        <mat-icon class="tool-icon" routerLink="data-visualization" matTooltip="גרף נתונים" >bar_chart</mat-icon>
+      }
+
     </div>
   </div>
   <button mat-icon-button (click)="toggleNavigationMenu()">
