--- a/mortgage-front/src/app/customer/mortgage-helper/mortgage-helper.component.html
+++ b/mortgage-front/src/app/customer/mortgage-helper/mortgage-helper.component.html
@@ -1,8 +1,10 @@
 <div class="mainAll">
-<mat-card class="helper-card">
+  <mat-card class="helper-card">
     <mat-card-header>
       <mat-card-title>עוזר אישי למשכנתאות</mat-card-title>
-      <mat-card-subtitle><pre>מידע וטיפים שיעזרו לך לנהל את המשכנתא שלך בצורה הטובה ביותר💡</pre></mat-card-subtitle>
+      <mat-card-subtitle>
+        מידע וטיפים שיעזרו לך לנהל את המשכנתא שלך בצורה הטובה ביותר 💡
+      </mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
       <mat-expansion-panel *ngFor="let tip of tips">
@@ -15,4 +17,4 @@
       </mat-expansion-panel>
     </mat-card-content>
   </mat-card>
-  </div>
+</div>
