--- a/mortgage-front/src/app/global/toolbar/toolbar.component.html
+++ b/mortgage-front/src/app/global/toolbar/toolbar.component.html
@@ -30,6 +30,6 @@
     </div>
   </div>
   <button mat-icon-button (click)="this.NavigationMenuToggleService.toggle()">
-    <mat-icon>menu</mat-icon>
+    <mat-icon  class="menuBut">menu</mat-icon>
   </button>
 </mat-toolbar>
