--- a/mortgage-front/src/app/admin/user-list/user-list.component.css
+++ b/mortgage-front/src/app/admin/user-list/user-list.component.css
@@ -60,3 +60,20 @@ th {
   text-align: right;
   color: #333; 
 }
+@media (max-width: 600px) {
+
+  th{
+    padding: 0;
+    margin: 0;
+    font-size: 0.78rem;
+    max-width: min-content;
+
+  }
+  td{
+    padding: 0;
+    margin: 0;
+    max-width: min-content;
+    font-size: 0.75rem;
+
+  }
+}
