--- a/mortgage-front/src/app/admin/user-list/user-list.component.html
+++ b/mortgage-front/src/app/admin/user-list/user-list.component.html
@@ -1,5 +1,5 @@
-<div class="mainAll">
-    <div class="contents">
+<div class="mainAll" >
+    <div class="mainAll" style="width: 50vw;min-width: max-content;">
       <h2 class="component-title">רשימת משתמשים</h2> <!-- header -->
   
       <ng-container *ngIf="isLoading; else dataLoaded">
@@ -18,34 +18,34 @@
   
         <div class="rtl-table-wrapper">
           <table mat-table [dataSource]="usersDataSource" matSort class="mat-elevation-z8 table-user" dir="rtl">
-            <ng-container matColumnDef="id">
+            <ng-container matColumnDef="id" >
               <th mat-header-cell *matHeaderCellDef mat-sort-header>תעודת זהות</th>
-              <td mat-cell *matCellDef="let user">{{ user.id }}</td>
+              <td mat-cell *matCellDef="let user" class="cell">{{ user.id }}</td>
             </ng-container>
   
             <ng-container matColumnDef="userName">
               <th mat-header-cell *matHeaderCellDef mat-sort-header>שם</th>
-              <td mat-cell *matCellDef="let user">{{ user.userName }}</td>
+              <td mat-cell *matCellDef="let user" class="cell">{{ user.userName }}</td>
             </ng-container>
   
-            <ng-container matColumnDef="password">
+            <ng-container matColumnDef="password" >
               <th mat-header-cell *matHeaderCellDef mat-sort-header>ססמה</th>
-              <td mat-cell *matCellDef="let user">{{ user.password }}</td>
+              <td mat-cell *matCellDef="let user" class="cell">{{ user.password }}</td>
             </ng-container>
   
-            <ng-container matColumnDef="email">
+            <ng-container matColumnDef="email" >
               <th mat-header-cell *matHeaderCellDef mat-sort-header>אי-מייל</th>
-              <td mat-cell *matCellDef="let user">{{ user.email }}</td>
+              <td mat-cell *matCellDef="let user" class="cell">{{ user.email }}</td>
             </ng-container>
   
-            <ng-container matColumnDef="role">
+            <ng-container matColumnDef="role" >
               <th mat-header-cell *matHeaderCellDef mat-sort-header>תפקיד</th>
-              <td mat-cell *matCellDef="let user">{{ getUserTypeString(user.role) }}</td>
+              <td mat-cell *matCellDef="let user" class="cell">{{ getUserTypeString(user.role) }}</td>
             </ng-container>
   
-            <ng-container matColumnDef="actions">
+            <ng-container matColumnDef="actions" >
               <th mat-header-cell *matHeaderCellDef>פעולות</th>
-              <td mat-cell *matCellDef="let user">
+              <td mat-cell *matCellDef="let user" class="cell">
                 <button mat-icon-button color="primary" (click)="editOrAddUser(user.id)">
                   <mat-icon>edit</mat-icon>
                 </button>
@@ -70,6 +70,6 @@
           <mat-paginator class="paginator" [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons dir="rtl"></mat-paginator>
         </div>
       </ng-template>
-    </div>
+    <!-- </div> -->
   </div>
   
