--- a/mortgage-front/src/styles.scss
+++ b/mortgage-front/src/styles.scss
@@ -17,18 +17,90 @@ tr:hover{
     background-color: rgba(178, 189, 202, 0.058)!important;
   } 
 
+// ::-webkit-scrollbar-track {
+//     background: #E7E5E8;
+// }
+
+// ::-webkit-scrollbar-thumb {
+//     background: #6a859f;
+//     border: 2px solid #E7E5E8;
+// }
+
+// ::-webkit-scrollbar-thumb:hover {
+//     background: #576d82;
+// }
+/* בסיס עבור כל הסקרולברים */
+::-webkit-scrollbar {
+  width: 16px; /* רוחב הסקרולבר */
+}
+
 ::-webkit-scrollbar-track {
-    background: #E7E5E8;
+  background: #e0e0e0; /* צבע הרקע של המסלול */
+  border-radius: 8px;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1); /* הצללה פנימית */
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #6a859f;
-    border: 2px solid #E7E5E8;
+  background: linear-gradient(45deg, #ff7e5f, #feb47b); /* צבע הידית עם גרדיאנט */
+  border-radius: 8px;
+  border: 4px solid #fff; /* מסגרת לבנה סביב הידית */
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3); /* הצללה חיצונית */
+  transition: background 0.4s ease, transform 0.2s ease; /* אפקטים חלקים */
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #576d82;
+  background: linear-gradient(45deg, #feb47b, #ff7e5f); /* שינוי צבע הידית בעת ריחוף */
+  transform: scale(1.1); /* הגדלת הידית בעת ריחוף */
 }
+
+/* עיצוב סקרולברים עבור סרגל גלילה אנכי */
+::-webkit-scrollbar {
+  width: 16px; /* רוחב הסקרולבר */
+}
+
+::-webkit-scrollbar-track {
+  background: #e0e0e0; /* צבע הרקע של המסלול */
+  border-radius: 8px;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1); /* הצללה פנימית */
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(45deg, #ff7e5f, #feb47b); /* צבע הידית עם גרדיאנט */
+  border-radius: 8px;
+  border: 4px solid #fff; /* מסגרת לבנה סביב הידית */
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3); /* הצללה חיצונית */
+  transition: background 0.4s ease, transform 0.2s ease; /* אפקטים חלקים */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(45deg, #feb47b, #ff7e5f); /* שינוי צבע הידית בעת ריחוף */
+  transform: scale(1.1); /* הגדלת הידית בעת ריחוף */
+}
+
+/* עיצוב סקרולברים עבור סרגל גלילה אופקי */
+::-webkit-scrollbar-horizontal {
+  height: 16px; /* גובה הסקרולבר */
+}
+
+::-webkit-scrollbar-track {
+  background: #e0e0e0; /* צבע הרקע של המסלול */
+  border-radius: 8px;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1); /* הצללה פנימית */
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(45deg, #a1b8e9, #afaeae); /* צבע הידית עם גרדיאנט */
+  border-radius: 8px;
+  border: 1px solid #fff; /* מסגרת לבנה סביב הידית */
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3); /* הצללה חיצונית */
+  transition: background 0.4s ease, transform 0.2s ease; /* אפקטים חלקים */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(45deg, #afaeae, #a1b8e9); /* שינוי צבע הידית בעת ריחוף */
+  transform: scale(1.1); /* הגדלת הידית בעת ריחוף */
+}
+
 .rotate {
     animation: rotation 2s infinite linear;
   }
